k8s/deployment-beat.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: default
  name: celery-beat
  labels:
    deployment: celery-beat
spec:
  replicas: 2
  selector:
    matchLabels:
      pod: celery-beat
  template:
    metadata:
      labels:
        pod: celery-beat
    spec:
      containers:
        - name: celery-beat
          image: mohamedamineblibech/backend:v1.323
          command: ['sh', '-c', "cd /django/khedma && celery -A khedma beat -l INFO"]
