k8s/deployment-django.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: django-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      app: backend-app
  template:
    metadata:
      labels:
        app: backend-app
    spec:
      imagePullSecrets:
        - name: dockerhub-secret
      securityContext:
        fsGroup: 1000
      # hostname: backend-service
      # affinity:
      #   podAffinity:
      #     requiredDuringSchedulingIgnoredDuringExecution:
      #       - labelSelector:
      #           matchLabels:
      #             app: backend-app
      #         topologyKey: "kubernetes.io/hostname"
      ##
      containers:
        - name: backend-app
          image: mohamedamineblibech/backend:v1.314
          ports:
            - containerPort: 80
          volumeMounts:
            - name: media-volume-mount
              # mountPath: /django/khedma/media/images
              mountPath: /django/khedma/media
          volumeMounts:
            - name: static-volume-mount
              # mountPath: /django/khedma/media/images
              mountPath: /django/khedma/static
      volumes:
        - name: media-volume-mount
          persistentVolumeClaim:
            claimName: media-pvc-local
      volumes:
        - name: static-volume-mount
          persistentVolumeClaim:
            claimName: static-pvc-local
---
# apiVersion: v1
# kind: Service
# metadata:
#   name: backend-service
#   namespace: default
# spec:
#   type: ExternalName
#   externalName: temp1234567.ddns.net
# ---
# apiVersion: v1
# kind: Service
# metadata:
#   namespace: default
#   name: backend-service
# spec:
#   type: ExternalName
#   externalName: khedma123456789.ddns.net
apiVersion: v1
kind: Service
metadata:
  namespace: default
  name: we-tekup
  labels:
    app: backend-app
spec:
  type: clusterIP
  selector:
    app: backend-app
  ports:
    - protocol: TCP
      name: http
      port: 80
      targetPort: 80
# ---
# apiVersion: networking.k8s.io/v1
# kind: Ingress
# metadata:
#   name: django-ingress
#   namespace: default
#   annotations:
#     nginx.ingress.kubernetes.io/rewrite-target: /
# spec:
#   rules:
#     - host: khedma123456789.ddns.net
#       http:
#         paths:
#           - path: /
#             pathType: Prefix
#             backend:
#               service:
#                 name: we-tekup
#                 port:
#                   number: 80
# ---
# apiVersion: v1
# kind: Service
# metadata:
#   namespace: default
#   name: backend-service
#   labels:
#     app: backend-app
# spec:
#   type: ExternalName
#   externalName: temp1234567.ddns.net
#   ports:
#     - protocol: TCP
#       port: 80
#       targetPort: 80
