k8s/3-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: example-app
  namespace: default
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/configuration-snippet: |
      proxy_set_header Host "temp1234567.ddns.net";
      proxy_set_header X-Forwarded-Host "temp1234567.ddns.net"; 
    nginx.ingress.kubernetes.io/rewrite-target: /api/

spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - temp1234567.ddns.net
    secretName: example-app-tls
  rules:
  - host: temp1234567.ddns.net
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: example-service
            port:
              number: 80
      - path: /api/
        pathType: Prefix
        backend:
          service:
            name: backend-service  
            port:
              number: 80
